# qt5-template

./: .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: build.yml
qml/: MainWindow.qml  qml.qrc
src/: main.cpp
